--- a/appveyor.yml
+++ b/appveyor.yml
@@ -31,10 +31,10 @@ install:
 
 before_build:
 - ps: if (Test-Path 'C:\Tools\NuGet3') { $nugetDir = 'C:\Tools\NuGet3' } else { $nugetDir = 'C:\Tools\NuGet' }; (New-Object Net.WebClient).DownloadFile('https://dist.nuget.org/win-x86-commandline/v3.3.0/nuget.exe', "$nugetDir\NuGet.exe")
-- nuget restore
+- nuget restore PowerShellEditorServices.sln
 
 build:
-  project: PowerShellEditorServices.sln
+  project: PowerShellEditorServices.NoNano.sln
   publish_nuget: true
   verbosity: minimal
 
