--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,5 @@
 version: '0.9.0.{build}'
-os: WMF 5
+image: Visual Studio 2017 RC
 clone_depth: 10
 skip_tags: true
 
@@ -16,11 +16,5 @@ install:
 build_script:
   - ps: Invoke-Build -Configuration Release
 
-test:
-  assemblies:
-    - Microsoft.PowerShell.EditorServices.Test.dll
-    - Microsoft.PowerShell.EditorServices.Test.Protocol.dll
-    - Microsoft.PowerShell.EditorServices.Test.Host.dll
-
-after_test:
-  - ps: Invoke-Build UploadTestLogs -Configuration Release
+# The build script takes care of the tests
+test: off
