--- a/src/PowerShellEditorServices/PowerShellEditorServices.csproj
+++ b/src/PowerShellEditorServices/PowerShellEditorServices.csproj
@@ -31,6 +31,13 @@
     <DefineConstants Condition="'$(PowerShellVersion)' == 'v5r2' Or '$(PowerShellVersion)' == ''">$(DefineConstants);PowerShellv5r2;PowerShellv5</DefineConstants>
   </PropertyGroup>
 
+  <!-- Fail the release build if there are missing public API documentation comments -->
+  <!-- TODO #353: Re-enable this once dotnet doesn't hang on these errors anymore -->
+  <!--<PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+    <WarningsAsErrors>1591,1573,1572</WarningsAsErrors>
+    <DocumentationFile>bin\$(TargetFramework)\$(Configuration)\Microsoft.PowerShell.EditorServices.xml</DocumentationFile>
+  </PropertyGroup>-->
+
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Sdk">
       <Version>1.0.0-alpha-20161104-2</Version>
