--- a/.vsts-ci/templates/ci-general.yml
+++ b/.vsts-ci/templates/ci-general.yml
@@ -1,5 +1,14 @@
+parameters:
+  pwsh: true
+
 steps:
-  - pwsh: scripts/azurePipelinesBuild.ps1
+  - pwsh: Write-Host "##vso[build.updatebuildnumber]$env:BUILD_SOURCEBRANCHNAME-$env:BUILD_SOURCEVERSION-$((get-date).ToString("yyyyMMddhhmmss"))"
+    displayName: Set Build Name for Non-PR
+    condition: ne(variables['Build.Reason'], 'PullRequest')
+  - task: PowerShell@2
+    inputs:
+      filePath: scripts/azurePipelinesBuild.ps1
+      pwsh: ${{ parameters.pwsh }}
   - task: PublishTestResults@2
     inputs:
       testRunner: VSTest
