--- a/src/PowerShellEditorServices.Engine/PowerShellEditorServices.Engine.csproj
+++ b/src/PowerShellEditorServices.Engine/PowerShellEditorServices.Engine.csproj
@@ -11,6 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.FileSystemGlobbing" Version="2.2.0" />
     <PackageReference Include="OmniSharp.Extensions.LanguageServer" Version="0.12.1" />
     <PackageReference Include="PowerShellStandard.Library" Version="5.1.1" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="2.0.4" />
