Inline apt-get statements and remove redundant Pester installs

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -9,12 +9,16 @@ FROM mcr.microsoft.com/dotnet/core/sdk:2.1.602
 ENV DEBIAN_FRONTEND=noninteractive
 
 # Configure apt and install packages
-RUN apt-get update \
-    && apt-get -y install --no-install-recommends apt-utils 2>&1 \
+RUN apt-get update && apt-get -y install --no-install-recommends apt-utils 2>&1 \
     #
     # Verify git, process tools, lsb-release (common in install instructions for CLIs) installed
     && apt-get -y install git procps lsb-release \
-    #
+    # Install PowerShell
+    && apt-get install curl gnupg apt-transport-https -y \
+    && curl https://packages.microsoft.com/keys/microsoft.asc | apt-key add - \
+    && echo "deb [arch=amd64] https://packages.microsoft.com/repos/microsoft-debian-stretch-prod stretch main" > /etc/apt/sources.list.d/microsoft.list \
+    && apt-get update \
+    && apt-get install -y powershell
     # Clean up
     && apt-get autoremove -y \
     && apt-get clean -y \
@@ -34,6 +38,6 @@ ENV DEBIAN_FRONTEND=dialog
 SHELL ["/usr/bin/pwsh", "-Command"]
 
 # Install PowerShell modules required for building and testing
-RUN Install-Module InvokeBuild -Force; Install-Module Pester -Force
-RUN Install-Module platyPS -Force; Install-Module Pester -Force
-RUN Install-Module Pester -Force; Install-Module Pester -Force
+RUN Install-Module InvokeBuild -Force
+RUN Install-Module platyPS -Force
+RUN Install-Module Pester -Force
