--- a/src/PowerShellEditorServices.Engine/PowerShellEditorServices.Engine.csproj
+++ b/src/PowerShellEditorServices.Engine/PowerShellEditorServices.Engine.csproj
@@ -10,15 +10,32 @@
     <LangVersion>Latest</LangVersion>
   </PropertyGroup>
 
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <LangVersion>latest</LangVersion>
+    <CheckForOverflowUnderflow></CheckForOverflowUnderflow>
+    <DocumentationFile></DocumentationFile>
+    <DocumentationFile></DocumentationFile>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <LangVersion>latest</LangVersion>
+  </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.FileSystemGlobbing" Version="2.2.0" />
     <PackageReference Include="OmniSharp.Extensions.LanguageServer" Version="0.13.0-*" />
     <PackageReference Include="PowerShellStandard.Library" Version="5.1.1" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="2.0.4" />
-    <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
+    <PackageReference Include="Serilog.Sinks.File" Version="4.0.0" />
     <PackageReference Include="System.IO.Pipes.AccessControl" Version="4.5.1" />
     <PackageReference Include="System.Security.Principal" Version="4.3.0" />
     <PackageReference Include="System.Security.Principal.Windows" Version="4.5.1" />
+    <PackageReference Include="System.Threading.Tasks.Dataflow" Version="4.9.0" />
+    <PackageReference Include="UnixConsoleEcho" Version="0.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\PowerShellContext\Session\" />
+    <Folder Include="Services\PowerShellContext\Console\" />
+    <Folder Include="Services\PowerShellContext\Extensions\" />
+    <Folder Include="Services\PowerShellContext\Components\" />
+  </ItemGroup>
 </Project>
