--- a/.vsts-ci/templates/ci-general.yml
+++ b/.vsts-ci/templates/ci-general.yml
@@ -23,3 +23,4 @@ steps:
     inputs:
       ArtifactName: PowerShellEditorServices
       PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    condition: succeededOrFailed()
