--- a/.vsts-ci/templates/release-general.yml
+++ b/.vsts-ci/templates/release-general.yml
@@ -38,8 +38,8 @@ steps:
   inputs:
     scriptType: inlineScript
     inlineScript: |
-     $signed="$(System.ArtifactsDirectory)\Signed\PowerShellEditorServices\*"
-     $notSigned="$(System.ArtifactsDirectory)\release\out\PowerShellEditorServices"
+     $signed="$(Build.ArtifactStagingDirectory)\Signed\PowerShellEditorServices\*"
+     $notSigned="$(Build.ArtifactStagingDirectory)\release\out\PowerShellEditorServices"
      Copy-Item $signed $notSigned -Recurse -Force
 
 - task: PowerShell@1
@@ -47,18 +47,18 @@ steps:
   inputs:
     scriptType: inlineScript
     inlineScript: |
-     $dir = "$(System.ArtifactsDirectory)\release\out\PowerShellEditorServices\PowerShellEditorServices"
-     New-FileCatalog -CatalogFilePath "$(System.ArtifactsDirectory)\PowerShellEditorServices.cat" -Path $dir
+     $dir = "$(Build.ArtifactStagingDirectory)\release\out\PowerShellEditorServices\PowerShellEditorServices"
+     New-FileCatalog -CatalogFilePath "$(Build.ArtifactStagingDirectory)\PowerShellEditorServices.cat" -Path $dir
 
-     $dir = "$(System.ArtifactsDirectory)\release\out\PowerShellEditorServices\PowerShellEditorServices.VSCode"
-     New-FileCatalog -CatalogFilePath "$(System.ArtifactsDirectory)\PowerShellEditorServices.VSCode.cat" -Path $dir
+     $dir = "$(Build.ArtifactStagingDirectory)\release\out\PowerShellEditorServices\PowerShellEditorServices.VSCode"
+     New-FileCatalog -CatalogFilePath "$(Build.ArtifactStagingDirectory)\PowerShellEditorServices.VSCode.cat" -Path $dir
 
 - task: PkgESCodeSign@10
   displayName: 'CodeSign tools/releaseBuild/FileCatalogSigning.xml'
   inputs:
     signConfigXml: tools/releaseBuild/FileCatalogSigning.xml
-    inPathRoot: '$(System.ArtifactsDirectory)'
-    outPathRoot: '$(System.ArtifactsDirectory)'
+    inPathRoot: '$(Build.ArtifactStagingDirectory)'
+    outPathRoot: '$(Build.ArtifactStagingDirectory)'
 
 - task: ms.vss-governance-buildtask.governance-build-task-component-detection.ComponentGovernanceComponentDetection@0
   displayName: 'Component Detection'
@@ -128,4 +128,4 @@ steps:
   displayName: 'Upload artifacts'
   inputs:
     scriptType: inlineScript
-    inlineScript: 'Write-Host "##vso[artifact.upload containerfolder=PowerShellEditorServices;artifactname=PowerShellEditorServices]$(System.ArtifactsDirectory)\release\out\PowerShellEditorServices"'
+    inlineScript: 'Write-Host "##vso[artifact.upload containerfolder=PowerShellEditorServices;artifactname=PowerShellEditorServices]$(Build.ArtifactStagingDirectory)\release\out\PowerShellEditorServices"'
