--- a/src/PowerShellEditorServices/PowerShellEditorServices.csproj
+++ b/src/PowerShellEditorServices/PowerShellEditorServices.csproj
@@ -20,6 +20,7 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.CSharp" Version="4.6.0" />
     <PackageReference Include="Microsoft.Extensions.FileSystemGlobbing" Version="3.0.0" />
     <PackageReference Include="OmniSharp.Extensions.LanguageServer" Version="0.14.0-*" />
     <PackageReference Include="PowerShellStandard.Library" Version="5.1.1" />
