--- a/src/PowerShellEditorServices/PowerShellEditorServices.csproj
+++ b/src/PowerShellEditorServices/PowerShellEditorServices.csproj
@@ -22,7 +22,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.CSharp" Version="4.6.0" />
     <PackageReference Include="Microsoft.Extensions.FileSystemGlobbing" Version="3.0.0" />
-    <PackageReference Include="OmniSharp.Extensions.LanguageServer" Version="0.14.0-*" />
+    <PackageReference Include="OmniSharp.Extensions.LanguageServer" Version="0.14.0" />
     <PackageReference Include="PowerShellStandard.Library" Version="5.1.1" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="3.0.1" />
     <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
@@ -30,6 +30,6 @@
     <PackageReference Include="System.Security.Principal" Version="4.3.0" />
     <PackageReference Include="System.Security.Principal.Windows" Version="4.6.0" />
     <PackageReference Include="UnixConsoleEcho" Version="0.1.0" />
-    <PackageReference Include="OmniSharp.Extensions.DebugAdapter.Server" Version="0.14.0-*" />
+    <PackageReference Include="OmniSharp.Extensions.DebugAdapter.Server" Version="0.14.0" />
   </ItemGroup>
 </Project>
