Treat missing `.ConfigureAwait(false)` as error (and fix)

--- a/.editorconfig
+++ b/.editorconfig
@@ -13,6 +13,9 @@ trim_trailing_whitespace = true
 csharp_space_before_open_square_brackets = true
 csharp_space_after_keywords_in_control_flow_statements = true
 
+# CA2007: Do not directly await a Task
+dotnet_diagnostic.CA2007.severity = error
+
 [*.{json}]
 indent_size = 2
 trim_trailing_whitespace = true
