Ignore warning about synchronously waiting on tasks
Because we do this all over the place, generating a lot of warnings, and
it's often an intentional behavior.

--- a/.editorconfig
+++ b/.editorconfig
@@ -25,6 +25,9 @@ dotnet_diagnostic.CS0414.severity = error
 dotnet_diagnostic.CA2007.severity = error
 # CA1822: Mark members as static
 dotnet_diagnostic.CA1822.severity = error
+# VSTHRD002: Synchronously waiting on tasks or awaiters may cause deadlocks
+# TODO: Fix all of these issues and explicitly ignore the intentional ones.
+dotnet_diagnostic.VSTHRD002.severity = silent
 # VSTHRD200: Use "Async" suffix for awaitable methods
 dotnet_diagnostic.VSTHRD200.severity = silent
 
