--- a/.editorconfig
+++ b/.editorconfig
@@ -23,6 +23,8 @@ dotnet_diagnostic.CS0219.severity = error
 dotnet_diagnostic.CS0414.severity = error
 # CA2007: Do not directly await a Task
 dotnet_diagnostic.CA2007.severity = error
+# CA1068: CancellationToken parameters must come last
+dotnet_diagnostic.CA1068.severity = error
 # CA1822: Mark members as static
 dotnet_diagnostic.CA1822.severity = error
 # CA1823: Avoid unused private fields
