Treat unforwarded `CancellationToken` as error (and fix)

--- a/.editorconfig
+++ b/.editorconfig
@@ -21,14 +21,16 @@ dotnet_diagnostic.CS0169.severity = error
 dotnet_diagnostic.CS0219.severity = error
 # CS0414: The private field 'field' is assigned but its value is never used
 dotnet_diagnostic.CS0414.severity = error
-# CA2007: Do not directly await a Task
-dotnet_diagnostic.CA2007.severity = error
 # CA1068: CancellationToken parameters must come last
 dotnet_diagnostic.CA1068.severity = error
 # CA1822: Mark members as static
 dotnet_diagnostic.CA1822.severity = error
 # CA1823: Avoid unused private fields
 dotnet_diagnostic.CA1823.severity = error
+# CA2007: Do not directly await a Task
+dotnet_diagnostic.CA2007.severity = error
+# CA2016: Forward the CancellationToken parameter to methods that take one
+dotnet_diagnostic.CA2016.severity = error
 # All maintainability issues (dead code etc.)
 # See: https://docs.microsoft.com/en-us/dotnet/fundamentals/code-analysis/quality-rules/maintainability-warnings
 dotnet_analyzer_diagnostic.category-Maintainability.severity = error
